--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "apikit-express",
-  "description": "RAML APIKit Express Middleware",
+  "name": "apikit-node",
+  "description": "RAML APIKit Node",
   "version": "0.0.5",
   "author": "MuleSoft, Inc.",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git://github.com/jcenturion/apikit-express.git"
+    "url": "git://github.com/jcenturion/apikit-node.git"
   },
   "bugs": {
-    "url": "https://github.com/jcenturion/apikit-express/issues"
+    "url": "https://github.com/jcenturion/apikit-node/issues"
   },
   "licenses": [
     {
       "type": "Apache 2.0",
-      "url": "https://github.com/jcenturion/apikit-express/blob/master/LICENSE"
+      "url": "https://github.com/jcenturion/apikit-node/blob/master/LICENSE"
     }
   ],
-  "main": "dist/apikit-express.js",
+  "main": "dist/apikit-node.js",
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-coffee": "~0.7.0",
