make packate private until it's released

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "apikit-node",
   "version": "0.0.1",
   "main": "dist/*",
+  "private": true,
   "ignore": [
     "**/*.coffee",
     "package.json",
