--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "express": "3.4.4",
     "async": "~0.2.9",
     "winston": "~0.7.2",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "moment": "~2.5.1"
   },
   "files": [
     "dist"
