--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "bugs": {
     "url": "https://github.com/mulesoft/osprey/issues"
   },
-  "licenses": [{
-    "type": "Apache 2.0",
-    "url": "https://github.com/mulesoft/osprey/blob/master/LICENSE"
-  }],
+  "licenses": [
+    {
+      "type": "Apache 2.0",
+      "url": "https://github.com/mulesoft/osprey/blob/master/LICENSE"
+    }
+  ],
   "main": "dist/lib.js",
   "devDependencies": {
     "grunt": "~0.4.2",
@@ -38,7 +40,8 @@
     "async": "~0.2.9",
     "winston": "~0.7.2",
     "colors": "~0.6.2",
-    "moment": "~2.5.1"
+    "moment": "~2.5.1",
+    "libxmljs": "~0.8.1"
   },
   "files": [
     "dist"
