--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mocha": "1.15.1",
     "should": "2.1.1",
     "grunt-bower-task": "~0.3.4",
-    "supertest": "~0.9.0"
+    "supertest": "~0.9.0",
+    "express-xml-bodyparser": "0.0.3"
   },
   "dependencies": {
     "raml-parser": "0.8.4",
