--- a/examples/leagues/package.json
+++ b/examples/leagues/package.json
@@ -16,12 +16,10 @@
     "grunt-coffeelint": "0.0.8",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-mocha-test": "~0.8.1",
+    "grunt-express-server": "~0.4.13",
     "mocha": "1.15.1",
     "should": "2.1.1",
     "supertest": "~0.8.2",
-    "grunt-nodemon": "~0.1.2",
-    "grunt-concurrent": "~0.4.2",
-    "load-grunt-tasks": "~0.2.1",
-    "grunt-wait": "~0.1.0"
+    "load-grunt-tasks": "~0.2.1"
   }
 }
