--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "should": "2.1.1",
     "grunt-bower-task": "~0.3.4",
     "supertest": "~0.9.0",
-    "express-xml-bodyparser": "0.0.3"
+    "express-xml-bodyparser": "0.0.3",
+    "grunt-githooks": "~0.3.1"
   },
   "dependencies": {
     "raml-parser": "0.8.4",
