--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "grunt-bower-task": "~0.3.4",
     "supertest": "~0.9.0",
     "express-xml-bodyparser": "0.0.3",
-    "grunt-githooks": "~0.3.1"
+    "grunt-githooks": "~0.3.1",
+    "bluebird": "^1.2.1"
   },
   "dependencies": {
     "raml-parser": "0.8.4",
