Updated RAML parser version

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "bluebird": "^1.2.1"
   },
   "dependencies": {
-    "raml-parser": "0.8.4",
+    "raml-parser": "~0.8.7",
     "jsonschema": "0.4.0",
     "express": "3.4.4",
     "async": "~0.2.9",
