--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "grunt-bower-task": "~0.3.4",
     "supertest": "~0.9.0",
     "express-xml-bodyparser": "0.0.3",
-    "grunt-githooks": "~0.3.1",
-    "bluebird": "^1.2.1"
+    "grunt-githooks": "~0.3.1"
   },
   "dependencies": {
     "raml-parser": "~0.8.7",
@@ -44,7 +43,8 @@
     "colors": "~0.6.2",
     "moment": "~2.5.1",
     "libxmljs": "~0.8.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "bluebird": "^1.2.1"
   },
   "files": [
     "dist"
