--- a/package.json
+++ b/package.json
@@ -27,29 +27,29 @@
   "main": "dist/lib.js",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-coffee": "0.10.1",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-coffeelint": "0.0.8",
-    "grunt-mocha-test": "~0.8.1",
-    "coffee-script": "~1.6.3",
-    "load-grunt-tasks": "~0.2.1",
-    "mocha": "1.15.1",
-    "should": "2.1.1",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-coffeelint": "0.0.10",
+    "grunt-mocha-test": "0.10.2",
+    "coffee-script": "1.7.1",
+    "load-grunt-tasks": "0.4.0",
+    "mocha": "1.19.0",
+    "should": "3.3.1",
     "grunt-bower-task": "~0.3.4",
-    "supertest": "~0.9.0",
-    "express-xml-bodyparser": "0.0.3",
+    "supertest": "0.12.1",
+    "express-xml-bodyparser": "0.0.4",
     "grunt-githooks": "~0.3.1"
   },
   "dependencies": {
     "raml-parser": "~0.8.7",
     "jsonschema": "0.4.0",
-    "express": "3.4.4",
+    "express": "3.7.0",
     "winston": "~0.7.2",
     "colors": "~0.6.2",
-    "moment": "~2.5.1",
-    "libxmljs": "~0.8.1",
+    "moment": "2.6.0",
+    "libxmljs": "0.9.0",
     "lodash": "~2.4.1",
     "bluebird": "^1.2.1"
   },
