--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,6 @@
     "examples"
   ],
   "dependencies": {
-    "api-console": "git@github.com:mulesoft/api-console.git"
+    "api-console": "git@github.com:mulesoft/api-console.git#v0.1"
   }
 }
