--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "osprey",
-  "version": "0.0.1",
+  "version": "0.2.0-alpha",
   "description": "",
   "main": "osprey.js",
   "files": [
