--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "finalhandler": "^0.3.3",
     "form-data": "^0.2.0",
-    "osprey-resources": "0.0.5",
+    "osprey-resources": "^0.1.0",
     "osprey-router": "0.0.4",
     "raml-parser": "^0.8.10",
     "raml2html": "^1.4.0",
@@ -49,8 +49,8 @@
     "jshint": "^2.6.0",
     "mocha": "^2.1.0",
     "osprey-router": "0.0.4",
-    "popsicle": "^0.3.8",
-    "popsicle-server": "0.0.1",
+    "popsicle": "^0.5.7",
+    "popsicle-server": "^0.1.1",
     "pre-commit": "^1.0.5",
     "server-address": "0.0.2"
   }
