--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "osprey",
   "version": "0.2.0-beta",
-  "description": "",
+  "description": "Generate an API proxy from a RAML definition, which can be used locally or globally for validating API requests and responses",
   "main": "osprey.js",
   "files": [
     "osprey.js",
