--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "osprey-method-handler": "^0.2.0",
     "osprey-resources": "^0.2.0",
     "osprey-router": "^0.1.0",
+    "parseurl": "^1.3.0",
     "raml-parser": "^0.8.10",
     "type-is": "^1.5.5",
     "yargs": "^3.4.5"
