--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "scripts": {
     "lint": "standard",
-    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --bail",
-    "test-spec": "mocha -R spec --bail",
+    "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --bail --require test/support/globals",
+    "test-spec": "mocha -R spec --bail --require test/support/globals",
     "test": "npm run lint && npm run test-cov"
   },
   "repository": {
@@ -30,25 +30,37 @@
   },
   "homepage": "https://github.com/mulesoft/osprey",
   "dependencies": {
-    "finalhandler": "^0.3.3",
+    "arrify": "^1.0.0",
+    "cookie-session": "^1.2.0",
+    "debug": "^2.2.0",
+    "finalhandler": "^0.4.0",
     "form-data": "^0.2.0",
     "http-errors": "^1.3.1",
-    "osprey-method-handler": "^0.2.0",
-    "osprey-resources": "^0.2.0",
-    "osprey-router": "^0.1.0",
+    "invariant": "^2.1.0",
+    "oauth2orize": "^1.0.1",
+    "osprey-method-handler": "^0.3.0",
+    "osprey-resources": "^0.3.0",
+    "osprey-router": "^0.1.1",
     "parseurl": "^1.3.0",
+    "passport": "^0.2.2",
+    "passport-http": "^0.2.2",
+    "passport-http-bearer": "^1.0.1",
+    "passport-oauth2-client-password": "^0.1.2",
     "raml-parser": "^0.8.10",
     "type-is": "^1.5.5",
+    "xtend": "^4.0.0",
     "yargs": "^3.4.5"
   },
   "devDependencies": {
     "body-parser": "^1.11.0",
     "busboy": "^0.2.9",
-    "chai": "^2.1.1",
+    "chai": "^3.0.0",
+    "client-oauth2": "^1.0.0",
     "es6-promise": "^2.0.1",
     "istanbul": "^0.3.5",
     "mocha": "^2.1.0",
-    "popsicle": "^0.5.7",
+    "popsicle": "^1.0.0",
+    "popsicle-basic-auth": "^0.1.0",
     "popsicle-server": "^1.0.0",
     "pre-commit": "^1.0.5",
     "server-address": "^1.0.1",
