--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "arrify": "^1.0.0",
     "body-parser": "^1.13.3",
+    "compose-middleware": "^1.0.1",
     "cookie-session": "^1.2.0",
     "debug": "^2.2.0",
     "finalhandler": "^0.4.0",
