--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chai": "^3.0.0",
     "client-oauth2": "^1.0.0",
     "es6-promise": "^2.0.1",
+    "express": "^4.13.3",
     "istanbul": "^0.3.5",
     "mocha": "^2.1.0",
     "popsicle": "^1.0.0",
