--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.13.3",
     "compose-middleware": "^1.0.1",
     "cookie-session": "^1.2.0",
+    "cors": "^2.7.1",
     "debug": "^2.2.0",
     "finalhandler": "^0.4.0",
     "form-data": "^0.2.0",
