--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "arrify": "^1.0.0",
     "body-parser": "^1.13.3",
     "compose-middleware": "^2.0.1",
+    "compression": "^1.5.2",
     "cookie-session": "^1.2.0",
     "cors": "^2.7.1",
     "debug": "^2.2.0",
