--- a/package.json
+++ b/package.json
@@ -49,15 +49,12 @@
     "cookie-session": "^1.2.0",
     "cors": "^2.7.1",
     "debug": "^2.2.0",
-    "dot": "^1.0.3",
-    "escape-html": "^1.0.2",
     "finalhandler": "^0.4.0",
     "form-data": "^0.2.0",
     "http-errors": "^1.3.1",
     "invariant": "^2.1.0",
-    "negotiator": "^0.5.3",
     "oauth2orize": "^1.0.1",
-    "osprey-method-handler": "^0.7.0",
+    "osprey-method-handler": "^0.8.0",
     "osprey-resources": "^0.3.0",
     "osprey-router": "^0.1.1",
     "parseurl": "^1.3.0",
@@ -66,6 +63,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-oauth2-client-password": "^0.1.2",
     "raml-parser": "^0.8.10",
+    "request-error-handler": "^1.0.0",
     "type-is": "^1.5.5",
     "xtend": "^4.0.0",
     "yargs": "^3.4.5"
