--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "http-errors": "^1.3.1",
     "invariant": "^2.1.0",
     "oauth2orize": "^1.0.1",
-    "osprey-method-handler": "^0.10.0",
+    "osprey-method-handler": "jstoiko/osprey-method-handler#raml1.0",
     "osprey-resources": "^0.7.0",
     "osprey-router": "^0.4.0",
     "parseurl": "^1.3.0",
@@ -62,7 +62,7 @@
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-oauth2-client-password": "^0.1.2",
-    "raml-1-parser": "^0.2.31",
+    "raml-1-parser": "^1.1.2",
     "request-error-handler": "^1.0.0",
     "type-is": "^1.5.5",
     "xtend": "^4.0.0",
