--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ notifications:
 
 node_js:
   - "0.12"
+  - "4"
+  - "node"
   - "iojs"
 
 after_script: "npm install coveralls@2 && cat ./coverage/lcov.info | coveralls"
