--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "compression": "^1.5.2",
     "cookie-session": "^1.2.0",
     "cors": "^2.7.1",
+    "datatype-expansion": "0.0.12",
     "debug": "^2.2.0",
     "finalhandler": "^0.4.0",
     "form-data": "^1.0.0-rc3",
