--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
   "homepage": "https://github.com/mulesoft/osprey",
   "dependencies": {
     "arrify": "^1.0.0",
-    "body-parser": "^1.13.3",
+    "body-parser": "^1.15.2",
     "compose-middleware": "^2.0.1",
     "compression": "^1.5.2",
     "cookie-session": "^1.2.0",
     "cors": "^2.7.1",
-    "datatype-expansion": "0.0.12",
+    "datatype-expansion": "^0.1.0",
     "debug": "^2.2.0",
     "finalhandler": "^0.4.0",
     "form-data": "^1.0.0-rc3",
@@ -63,7 +63,7 @@
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-oauth2-client-password": "^0.1.2",
-    "raml-1-parser": "^1.1.4",
+    "raml-1-parser": "^1.1.11",
     "request-error-handler": "^1.0.0",
     "type-is": "^1.5.5",
     "xtend": "^4.0.0",
