--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "http-errors": "^1.3.1",
     "invariant": "^2.1.0",
     "oauth2orize": "^1.0.1",
-    "osprey-method-handler": "mulesoft-labs/osprey-method-handler#raml1.0-fixes",
-    "osprey-resources": "mulesoft-labs/osprey-resources#raml1.0-fixes",
-    "osprey-router": "mulesoft-labs/osprey-router#raml1.0-fixes",
+    "osprey-method-handler": "^0.11.1",
+    "osprey-resources": "^0.7.1",
+    "osprey-router": "^0.5.1",
     "parseurl": "^1.3.0",
     "passport": "^0.3.0",
     "passport-http": "^0.3.0",
