Perform initial tests refactoring for popsicle 12.0.4

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "datatype-expansion": "^0.3.6",
     "debug": "^4.0.0",
     "finalhandler": "^1.1.1",
-    "form-data": "^2.3.3",
     "http-errors": "^1.7.1",
     "invariant": "^2.2.2",
     "oauth2orize": "^1.0.1",
@@ -75,9 +74,10 @@
     "client-oauth2": "^4.2.0",
     "es6-promise": "^4.2.4",
     "express": "^4.13.3",
+    "form-data": "^2.5.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.0",
-    "popsicle": "^12.0.4",
+    "popsicle": "12.0.4",
     "popsicle-basic-auth": "^1.0.0",
     "popsicle-server": "^2.0.0",
     "pre-commit": "^1.0.5",
