--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "raml-1-parser": "^1.1.52",
     "request-error-handler": "^1.1.1",
     "type-is": "^1.5.5",
+    "webapi-parser": "^0.3.2",
     "xtend": "^4.0.0",
     "yargs": "^14.2.0"
   },
