Update linked projects versions from gh

--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "http-errors": "^1.7.1",
     "invariant": "^2.2.2",
     "oauth2orize": "^1.0.1",
-    "osprey-method-handler": "mulesoft-labs/osprey-method-handler#rework_webapi_parser",
-    "osprey-resources": "mulesoft-labs/osprey-resources#rework_webapi_parser",
-    "osprey-router": "mulesoft-labs/osprey-router#rework_webapi_parser",
+    "osprey-method-handler": "github:mulesoft-labs/osprey-method-handler#rework_webapi_parser",
+    "osprey-resources": "github:mulesoft-labs/osprey-resources#rework_webapi_parser",
+    "osprey-router": "github:mulesoft-labs/osprey-router#rework_webapi_parser",
     "parseurl": "^1.3.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
