--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "datatype-expansion": "^0.3.6",
     "debug": "^4.0.0",
     "finalhandler": "^1.1.1",
-    "form-data": "^2.5.0",
+    "form-data": "^3.0.0",
     "http-errors": "^1.7.1",
     "invariant": "^2.2.2",
     "oauth2orize": "^1.0.1",
@@ -67,7 +67,7 @@
     "request-error-handler": "^1.1.1",
     "type-is": "^1.5.5",
     "xtend": "^4.0.0",
-    "yargs": "^13.3.0"
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "busboy": "^0.3.1",
@@ -75,13 +75,13 @@
     "client-oauth2": "^4.2.0",
     "es6-promise": "^4.2.4",
     "express": "^4.13.3",
-    "mocha": "^6.1.4",
-    "nyc": "^14.1.0",
-    "popsicle": "12.0.4",
-    "popsicle-server": "^2.0.0",
+    "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
+    "popsicle": "^12.0.5",
+    "popsicle-server": "^3.0.0",
     "pre-commit": "^1.0.5",
-    "rewire": "^4.0.0",
-    "server-address": "^2.0.0",
-    "standard": "^12.0.1"
+    "rewire": "^5.0.0",
+    "server-address": "^3.0.1",
+    "standard": "^14.3.3"
   }
 }
